--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Nice Blog
-name: Nice Blog # your name
-email: youremail@example.com # your email address
+title: WOODS
+name: WoodsPublishing # your name
+email: alexbirchmedia@gmail.com # your email address
 description: >
-    A Simple Jekyll Blog Theme. # this means to ignore newlines until "baseurl:"
-baseurl: "/Nice_Blog" # the subpath of your site, e.g. /blog
-url: "https://itisbenjamin.github.io" # the base hostname & protocol for your site
-twitter_username: itisbenjamin1 # your Twitter username
-github_username: itisbenjamin # your Github username
-disqus_username: itisbenjamin # your disqus username
+    Music Publishing # this means to ignore newlines until "baseurl:"
+baseurl: "/WoodsPublishing" # the subpath of your site, e.g. /blog
+url: "https://ABoyCalledPuk.github.io" # the base hostname & protocol for your site
+#twitter_username: itisbenjamin1 # your Twitter username
+#github_username: itisbenjamin # your Github username
+#disqus_username: itisbenjamin # your disqus username
 
-google-analytics: UA-75034651-1 # add it if you have one
+#google-analytics: UA-75034651-1 # add it if you have one
 
 skillstree: true # turn on or off the skills tree in about page
 
