--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://ABoyCalledPuk.github.io" # the base hostname & protocol for your s
 
 #google-analytics: UA-75034651-1 # add it if you have one
 
-skillstree: true # turn on or off the skills tree in about page
+#skillstree: true # turn on or off the skills tree in about page
 
 # Build settings
 permalink: none
